[NEW] change OpenCV to 3.4 & add Note.md

--- a/feature_tracker/CMakeLists.txt
+++ b/feature_tracker/CMakeLists.txt
@@ -12,7 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
     cv_bridge
     camera_model
     )
-
+set(OpenCV_DIR "~/Downloads/opencv-3.4.6/build")
 find_package(OpenCV REQUIRED)
 
 catkin_package()
